# black-hole-simulations

./: .gitignore  2D_lensing.cpp  2D_simulation.cpp  CMakeLists.txt  README.md  black_hole.cpp  grid.frag
